--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.1",
-    "sass-loader": "^4.0.2"
+    "sass-loader": "^4.0.2",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "6.20.0",
