--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   "homepage": "https://github.com/lbn/immersion",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "immutability-helper": "^2.1.0",
+    "loglevel": "^1.4.1",
     "node-sass": "^3.13.0",
     "react": "15.4.1",
     "react-bootstrap": "^0.30.7",
