--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.1",
+    "react-router": "^3.0.1",
     "sass-loader": "^4.0.2",
     "whatwg-fetch": "^2.0.1"
   },
