--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-runtime": "^6.20.0",
+    "chai": "^3.5.0",
     "css-loader": "0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
@@ -44,6 +45,8 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
+    "wdio-mocha-framework": "^0.5.8",
+    "webdriverio": "^4.6.2",
     "webpack": "1.14.0",
     "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dashboard": "^0.2.0",
