--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,10 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "lodash": "^4.17.4",
+    "lodash.groupby": "^4.6.0",
+    "lodash.orderby": "^4.6.0",
+    "lodash.values": "^4.3.0",
     "postcss-loader": "^1.2.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "0.13.1",
