--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,8 @@ nltk==3.2.2
 olefile==0.44
 Pillow==4.0.0
 pony==0.7.1
+py==1.4.32
+pytest==3.0.6
 python-dateutil==2.6.0
 PyYAML==3.12
 requests==2.13.0
@@ -24,3 +26,4 @@ requests-file==1.4.1
 six==1.10.0
 tldextract==2.0.2
 Werkzeug==0.11.11
+yandex.translate==0.3.5
