--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,18 +12,26 @@ Jinja2==2.8
 lxml==3.7.2
 Markdown==2.6.7
 MarkupSafe==0.23
+mirakuru==0.8.2
 newspaper3k==0.1.9
 nltk==3.2.2
 olefile==0.44
 Pillow==4.0.0
 pony==0.7.1
+port-for==0.3.1
+psutil==5.2.1
+psycopg2==2.7.1
 py==1.4.32
+pycountry==17.1.8
 pytest==3.0.6
+pytest-postgresql==1.2.0
 python-dateutil==2.6.0
 PyYAML==3.12
 requests==2.13.0
 requests-file==1.4.1
 six==1.10.0
 tldextract==2.0.2
+toml==0.9.2
+voluptuous==0.9.3
 Werkzeug==0.11.11
 yandex.translate==0.3.5
