--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,22 +41,29 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-runtime": "^6.20.0",
+    "bootstrap-loader": "^2.0.0",
+    "bootstrap-sass": "^3.3.7",
     "chai": "^3.5.0",
-    "css-loader": "0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lodash.groupby": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.values": "^4.3.0",
+    "node-sass": "^3.13.1",
     "postcss-loader": "^1.2.0",
     "react-hot-loader": "^3.0.0-beta.6",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "wdio-mocha-framework": "^0.5.8",
     "webdriverio": "^4.6.2",
-    "webpack": "1.14.0",
+    "webpack": "^2.2.1",
     "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "1.16.2"
