--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "immutability-helper": "^2.1.0",
+    "jwt-decode": "^2.2.0",
     "loglevel": "^1.4.1",
     "node-sass": "^3.13.0",
     "react": "15.4.1",
@@ -33,6 +34,7 @@
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
+    "auth0-lock": "^10.13.0",
     "babel-core": "6.20.0",
     "babel-loader": "6.2.9",
     "babel-plugin-transform-class-properties": "^6.19.0",
@@ -66,6 +68,7 @@
     "webpack": "^2.2.1",
     "webpack-cleanup-plugin": "^0.4.1",
     "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "1.16.2"
+    "webpack-dev-server": "1.16.2",
+    "webpack-dotenv-plugin": "^2.0.0"
   }
 }
